yoshimi 1.5.4 M

2017-11-2 Will.
* Major split up of midi controls from audio thread.
* Unification of CC from any source.
* More on unified root/bank/program.

2017-10-31 Will
* Further inprovments to unified root/bank/program.
* Added 'Root_Bank_Program.txt' to dev_notes.
* Corrected anomally with GUI bank list entries.

2017-10-30 Will
* MIDI controllers done for CLI  direct access
  but disabled until rest of system done.

2017-10-29 Will
* Unified root/bank/program change complete
  for CLI direct access.

2017-10-28 Will
* MIDI note on/off routing much simplified.
* Further work splitting up MIDI routing.
  NRPNs partially separated out
* NRPNs can now be completely ignored.

2017-10-26 Will
* Corrected GUI panel anomally when changing parts.
* Started implimenting unified root/bank/program change.
* Applied mutex lock corrections suggested by 'blubee'.
* Corrected implied cast in jackengine.

2017-10-24 Will
* Revised parameters for direct midi controls.
* Virtual keyboard now uses these, so threadsafe.
* Updated control numbers.

2017-10-23 Will
* GUI improvements to mixer panel.
* Direct access to NoteOn, NoteOff, SetController.
* Updated dev_notes/Yoshimi Control Numbers.ods

2017-10-22 Will
* Improved GUI behaviour on part changes.
* More doc updates.

2017-10-21 Will
* Minor adjustments to musl patch from newbluemoon.
* Further code cleanups.
* Doc updates.

2017-10-20 Will
* Doc updates.
* Added missing limits.h include to MiscFuncs.

2017-10-16 Will
* Finalised and cleaned up bugfix code.
* Rationalised GUI updates (only one Fl::check() call).
* set as V 1.5.4.1 release.

2017-10-14 Will
* Bugfix: Main part controls were responding to all
  remote input channels but upper panel rows weren't.
* set as V 1.5.4.1 rc2

2017-10-13 Will
* BugFix: Instrument loading now synchronised.
* CLI enable/disable now updates panel.
* set as V 1.5.4.1 rc1

2017-9-27 Will
* Merged in noboost branch. So no dependency on boost.